# FoodStore-Gestion

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6ebe5e787bdd_0001_initial_schema.py  8212a24ee1b0_0004_ingredientes_table.py  a1b2c3d4e5f6_0002_add_family_id_to_refresh_token.py  a2b3c4d5e6f7_0006_add_catalog_public_indices.py  b1c2d3e4f5a6_0010_pago_external_reference_non_unique.py  c0d1e2f3a4b5_0011_pago_add_mp_preference_id.py  c9d8e7f6a5b4_0003_categoria_nombre_per_parent.py  d1e2f3a4b5c6_0013_admin_usuarios_search_indexes.py  d423a69b21a0_create_direccion_entrega.py  e1f2a3b4c5d6_0014_admin_metrics_indexes.py  e5f6a7b8c9d0_0008_detalle_pedido_personalizacion_uuid.py  f1e2d3c4b5a6_0005_add_producto_indexes.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/core/: config.py  context.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py  uow.py  validators.py
backend/app/db/: __init__.py  base.py  seed.py  session.py
backend/app/integrations/: mercadopago_client.py
backend/app/models/: __init__.py  address.py  base.py  catalog.py  order.py  user.py
backend/app/pagos/: repository.py  router.py  schemas.py  service.py
backend/app/repositories/: __init__.py  admin_usuarios.py  base.py  categoria.py  direccion_entrega.py  historial_estado.py  ingrediente.py  pedido.py  producto.py  user.py
backend/app/schemas/: __init__.py  admin_usuarios.py  auth.py  base.py  catalog_public.py  categoria.py  direccion_entrega.py  ingrediente.py  pedidos.py  pedidos_validar.py  producto.py  profile.py
backend/app/services/: admin_usuarios.py  auth.py  catalog_public.py  categoria.py  direccion_entrega.py  ingrediente.py  pedidos_service.py  pedidos_validar_service.py  producto.py  profile.py  state_transition.py
backend/tests/: README.md  conftest.py  test_base_repository.py  test_deps.py  test_health.py  test_infrastructure.py  test_metricas.py  test_migrations.py  test_pagos_e2e.py  test_pedidos_validar_router.py  test_security.py  test_seed.py  test_uow.py
backend/tests/fixtures/: __init__.py  uow.py
backend/tests/ingredientes/: test_ingrediente_repository.py  test_ingrediente_service.py
backend/tests/integration/: test_admin_usuarios_api.py  test_admin_usuarios_concurrency.py  test_auth_e2e.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_refresh.py  test_auth_register.py  test_catalog_public.py  test_categorias.py  test_direcciones_router.py  test_ingredientes.py  test_orders_visualization.py  test_pedidos_fsm_router.py  test_pedidos_router.py  test_productos.py  test_rbac.py
backend/tests/pedidos/: test_pedidos_concurrency.py  test_pedidos_service.py
backend/tests/productos/: test_producto_repository.py  test_producto_service.py
backend/tests/rbac/: test_admin_access_catalog.py  test_admin_access_pedidos.py
backend/tests/unit/: test_admin_usuarios_schemas.py  test_admin_usuarios_service.py  (+21 more)
(+620 files in other folders)
