[project]
name = "foodstore-backend"
version = "0.1.0"
description = "Backend FastAPI para la plataforma de e-commerce Food Store"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "sqlmodel",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "slowapi",
    "structlog",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "pytest-cov",
    "anyio",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (reemplaza flake8 + isort + black)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
